# andrematte.github.io

./: .gitignore  404.html  README-backup.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
archive/2021/001-scraping-covid19/: index.html
archive/2021/002-covid19-underreporting/: index.html
archive/2024/: index.html
archive/2024/001-opencv-workshop/: index.html
assets/javascripts/: bundle.50899def.min.js  bundle.fe8b6f2b.min.js
category/misc/: index.html
docs/: .authors.yml  about.md  about.pt.md  index.md  index.pt.md  portfolio.md  projects.md  projects.pt.md
docs/archive/2021/: 001-scraping-covid19.md  001-scraping-covid19.pt.md  002-covid19-underreporting.pt.md
docs/archive/2024/: 001-opencv-workshop.md  001-opencv-workshop.pt.md
docs/overrides/: landing.html
docs/posts/2021/001-scraping-covid19/: 001-scraping-covid19.md
docs/posts/2021/002-covid19-underreporting/: 002-covid19-underreporting.md
docs/posts/2024/003-opencv-workshop/: 001-opencv-workshop.md
docs/posts/2024/hello-world/: hello-world.md
docs/posts/2024/not-project/: not-project.md
docs/stylesheets/: extra.css
overrides/: landing.html  landing.pt.html
posts/hello-world/: index.html
projects/: index.html
pt/: index.html
pt/about/: index.html
pt/archive/2021/001-scraping-covid19/: index.html
pt/archive/2021/002-covid19-underreporting/: index.html
pt/archive/2024/001-opencv-workshop/: index.html
pt/projects/: index.html
search/: search_index.json
stylesheets/: extra.css
